catalogue service module setup

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 						<phase>compile</phase>
 						<goals>
 							<goal>check</goal>
+							<goal>apply</goal>
 						</goals>
 					</execution>
 				</executions>
