--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -5,9 +5,9 @@ on:
     paths:
       - catalog-service/**
     branches:
-      - 'main'
+      - 'master'
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
   build:
